src/test/ui/parser/byte-string-literals.stderr
error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:1:32
   |
LL | static FOO: &'static [u8] = b"\f";
   |                                ^ unknown byte escape

error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:4:8
   |
LL |     b"\f";
   |        ^ unknown byte escape

error: invalid character in numeric character escape: Z
  --> $DIR/byte-string-literals.rs:5:10
   |
LL |     b"\x0Z";
   |          ^

error: byte constant must be ASCII. Use a \xHH escape for a non-ASCII byte
  --> $DIR/byte-string-literals.rs:6:7
   |
LL |     b"é";
   |       ^

error[E0766]: unterminated double quote byte string
  --> $DIR/byte-string-literals.rs:7:6
   |
LL |       b"a
   |  ______^
LL | | }
   | |__^

error: this file contains an unclosed delimiter
  --> $DIR/byte-string-literals.rs:8:3
   |
LL | pub fn main() {
   |               - unclosed delimiter
...
LL | }
   |   ^

error[E0308]: mismatched types
  --> $DIR/byte-string-literals.rs:7:5
   |
LL |   pub fn main() {
   |                 - expected `()` because of default return type
...
LL | /     b"a
LL | | }
   | |__^ expected `()`, found `&[u8; 53]`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0308, E0766.
For more information about an error, try `rustc --explain E0308`.
